login and registration fix
